tests/expectations/parser/type_/signature_verify_bad_syntax_fail.out
namespace = "Parse"
expectation = "Fail"
outputs = ["""
Error [EPAR0370021]: The type of `signature` has no associated function `verify` that takes 3 argument(s).
    --> test:5:23
     |
   5 |         let a: bool = signature.verify(s, a, v);
     |                       ^^^^^^^^^^^^^^^^^^^^^^^^^
Error [EPAR0370005]: expected ) -- found ','
    --> test:6:17
     |
   6 |         assert(a, b);
     |                 ^"""]
